--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             >Web<span class="logo-span">Studio</span></a
           >
           <ul class="nav-list">
-            <li><a href="./index.html" class="nav-link">Studio</a></li>
+            <li><a href="./index.html" class="nav-link first-li">Studio</a></li>
             <li><a href="" class="nav-link">Portfolio</a></li>
             <li><a href="" class="nav-link">Contacts</a></li>
           </ul>
