--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
           <h2 class="visually-hidden second-section-title">Our Features</h2>
           <ul class="second-section-list">
             <li class="second-section-list-item">
+              <div class="div-class-svg">
+                <svg class="svg-class-icon">
+                  <use href="./images/icons.svg#icon-antenna"
+                   class="use-class-href">
+                  </use>
+                </svg>
+              </div>
               <h3 class="section-title">Strategy</h3>
               <p class="section-p">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +82,12 @@
               </p>
             </li>
             <li class="second-section-list-item">
+              <div class="div-class-svg">
+                <svg class="svg-class-icon">
+                  <use href="./images/icons.svg#icon-astronaut" class="use-class-href">  
+                  </use>
+                </svg>
+              </div>
               <h3 class="section-title">Punctuality</h3>
               <p class="section-p">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +95,12 @@
               </p>
             </li>
             <li class="second-section-list-item">
+              <div class="div-class-svg">
+                <svg class="svg-class-icon">
+                  <use href="./images/icons.svg#icon-clock" class="use-class-href">  
+                  </use>
+                </svg>
+              </div>
               <h3 class="section-title">Diligence</h3>
               <p class="section-p">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +108,12 @@
               </p>
             </li>
             <li class="second-section-list-item">
+              <div class="div-class-svg">
+                <svg class="svg-class-icon">
+                  <use href="./images/icons.svg#icon-diagram" class="use-class-href">  
+                  </use>
+                </svg>
+              </div>
               <h3 class="section-title">Technologies</h3>
               <p class="section-p">
                 Design practice focused on digital experiences. We bring forth a
@@ -113,6 +138,43 @@
               <div class="team-card">
                 <h3 class="section-title team-card-title">Mark Guerrero</h3>
                 <p class="section-p team-card-text">Product Designer</p>
+                <ul class="social-media">
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-instagram" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-twitter" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-facebook-svg" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-linkedin" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -121,6 +183,43 @@
               <div class="team-card">
                 <h3 class="section-title team-card-title">Tom Ford</h3>
                 <p class="section-p team-card-text">Frontend Developer</p>
+                <ul class="social-media">
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-instagram" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-twitter" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-facebook-svg" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-linkedin" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -133,6 +232,43 @@
               <div class="team-card">
                 <h3 class="section-title team-card-title">Camila Garcia</h3>
                 <p class="section-p team-card-text">Marketing</p>
+                <ul class="social-media">
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-instagram" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-twitter" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-facebook-svg" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-linkedin" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -144,7 +280,43 @@
               />
               <div class="team-card">
                 <h3 class="section-title team-card-title">Daniel Wilson</h3>
-                <p class="section-p team-card-text">UI Designer</p>
+                <p class="section-p team-card-text">UI Designer</p><ul class="social-media">
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-instagram" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-twitter" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-facebook-svg" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-media-class">
+                    <a class="social-media-a" href="">
+                      <svg class="social-media-svg">
+                       <use href="./images/icons.svg#icon-linkedin" >
+                       </use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -157,11 +329,15 @@
           <h2 class="fourth-section-title">Our Portfolio</h2>
           <ul class="fourth-section-list">
             <li class="fourth-section-list-item">
-              <img
+              <div class="fourth-sect-div">
+                <img
                 src="./images/port1.jpg"
                 alt="Banking app"
-                width="360"
-              />
+                width="360"/>
+                <p class="fourth-sect-p">
+                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
+                </p>
+              </div>        
               <div class="app-card">
                 <h3 class="section-title app-category-title">Banking App</h3>
                 <p class="section-p">App</p>
@@ -169,11 +345,15 @@
             </li>
 
             <li class="fourth-section-list-item">
-              <img
+              <div class="fourth-sect-div">
+                <img
                 src="./images/port2.jpg"
                 alt="cashless payment"
-                width="360"
-              />
+                width="360"/>
+                <p class="fourth-sect-p">
+                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">
                   Cashless Payment
@@ -183,11 +363,15 @@
             </li>
 
             <li class="fourth-section-list-item">
+            <div class="fourth-sect-div">
               <img
-                src="./images/port3.jpg"
-                alt="meditation app"
-                width="360"
-              />
+              src="./images/port3.jpg"
+              alt="meditation app"
+              width="360"/>
+              <p class="fourth-sect-p">
+                14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
+              </p>
+            </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Meditation App</h3>
                 <p class="section-p">App</p>
@@ -195,11 +379,15 @@
             </li>
 
             <li class="fourth-section-list-item">
-              <img
+              <div class="fourth-sect-div">
+                <img
                 src="./images/port4.jpg"
                 alt="Taxi Service"
-                width="360"
-              />
+                width="360"/>
+                <p class="fourth-sect-p">
+                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Taxi Service</h3>
                 <p class="section-p">Marketing</p>
@@ -207,11 +395,15 @@
             </li>
 
             <li class="fourth-section-list-item">
-              <img
+              <div class="fourth-sect-div">
+                <img
                 src="./images/port5.jpg"
                 alt="screen illustrations"
-                width="360"
-              />
+                width="360"/>
+                <p class="fourth-sect-p">
+                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">
                   Screen Illustrations
@@ -221,11 +413,15 @@
             </li>
 
             <li class="fourth-section-list-item">
-              <img
+              <div class="fourth-sect-div">
+                <img
                 src="./images/port6.jpg"
                 alt="online courses"
-                width="360"
-              />
+                width="360"/>
+                <p class="fourth-sect-p">
+                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
+                </p>
+              </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Online Courses</h3>
                 <p class="section-p">Marketing</p>
@@ -246,6 +442,40 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="footer-div">
+          <a href=""></a>
+          <p class="footer-p-sm">Social media</p>
+          <ul class="footer-ul">
+            <li class="footer-li">
+              <a class="footer-li-a" href="">
+                <svg class="footer-svg">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-li">
+              <a class="footer-li-a" href="">
+                <svg class="footer-svg">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-li">
+              <a class="footer-li-a" href="">
+                <svg class="footer-svg">
+                  <use href="./images/icons.svg#icon-facebook-svg"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-li">
+              <a class="footer-li-a" href="">
+                <svg class="footer-svg">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
