--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             >Web<span class="logo-span">Studio</span></a
           >
           <ul class="nav-list">
-            <li><a href="./index.html" class="nav-link first-li">Studio</a></li>
+            <li><a class="first-li-a" href="./index.html" class="nav-link first-li">Studio</a></li>
             <li><a href="" class="nav-link">Portfolio</a></li>
             <li><a href="" class="nav-link">Contacts</a></li>
           </ul>
@@ -69,7 +69,7 @@
           <ul class="second-section-list">
             <li class="second-section-list-item">
               <div class="div-class-svg">
-                <svg class="svg-class-icon">
+                <svg width="64" height="64" class="svg-class-icon">
                   <use href="./images/icons.svg#icon-antenna"
                    class="use-class-href">
                   </use>
@@ -83,7 +83,7 @@
             </li>
             <li class="second-section-list-item">
               <div class="div-class-svg">
-                <svg class="svg-class-icon">
+                <svg width="64" height="64" class="svg-class-icon">
                   <use href="./images/icons.svg#icon-astronaut" class="use-class-href">  
                   </use>
                 </svg>
@@ -96,7 +96,7 @@
             </li>
             <li class="second-section-list-item">
               <div class="div-class-svg">
-                <svg class="svg-class-icon">
+                <svg width="64" height="64" class="svg-class-icon">
                   <use href="./images/icons.svg#icon-clock" class="use-class-href">  
                   </use>
                 </svg>
@@ -109,7 +109,7 @@
             </li>
             <li class="second-section-list-item">
               <div class="div-class-svg">
-                <svg class="svg-class-icon">
+                <svg width="64" height="64" class="svg-class-icon">
                   <use href="./images/icons.svg#icon-diagram" class="use-class-href">  
                   </use>
                 </svg>
@@ -141,7 +141,7 @@
                 <ul class="social-media">
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-instagram" >
                        </use>
                       </svg>
@@ -150,7 +150,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-twitter" >
                        </use>
                       </svg>
@@ -159,7 +159,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-facebook-svg" >
                        </use>
                       </svg>
@@ -168,7 +168,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-linkedin" >
                        </use>
                       </svg>
@@ -186,7 +186,7 @@
                 <ul class="social-media">
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-instagram" >
                        </use>
                       </svg>
@@ -195,7 +195,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-twitter" >
                        </use>
                       </svg>
@@ -204,7 +204,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-facebook-svg" >
                        </use>
                       </svg>
@@ -213,7 +213,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-linkedin" >
                        </use>
                       </svg>
@@ -235,7 +235,7 @@
                 <ul class="social-media">
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-instagram" >
                        </use>
                       </svg>
@@ -244,7 +244,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-twitter" >
                        </use>
                       </svg>
@@ -253,7 +253,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-facebook-svg" >
                        </use>
                       </svg>
@@ -262,7 +262,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-linkedin" >
                        </use>
                       </svg>
@@ -283,7 +283,7 @@
                 <p class="section-p team-card-text">UI Designer</p><ul class="social-media">
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-instagram" >
                        </use>
                       </svg>
@@ -292,7 +292,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-twitter" >
                        </use>
                       </svg>
@@ -301,7 +301,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-facebook-svg" >
                        </use>
                       </svg>
@@ -310,7 +310,7 @@
 
                   <li class="social-media-class">
                     <a class="social-media-a" href="">
-                      <svg class="social-media-svg">
+                      <svg width="16" height="16" class="social-media-svg">
                        <use href="./images/icons.svg#icon-linkedin" >
                        </use>
                       </svg>
@@ -334,9 +334,7 @@
                 src="./images/port1.jpg"
                 alt="Banking app"
                 width="360"/>
-                <p class="fourth-sect-p">
-                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
-                </p>
+                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
               </div>        
               <div class="app-card">
                 <h3 class="section-title app-category-title">Banking App</h3>
@@ -350,9 +348,7 @@
                 src="./images/port2.jpg"
                 alt="cashless payment"
                 width="360"/>
-                <p class="fourth-sect-p">
-                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
-                </p>
+                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
               </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">
@@ -368,9 +364,7 @@
               src="./images/port3.jpg"
               alt="meditation app"
               width="360"/>
-              <p class="fourth-sect-p">
-                14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
-              </p>
+              <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
             </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Meditation App</h3>
@@ -384,9 +378,7 @@
                 src="./images/port4.jpg"
                 alt="Taxi Service"
                 width="360"/>
-                <p class="fourth-sect-p">
-                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
-                </p>
+                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
               </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Taxi Service</h3>
@@ -400,9 +392,7 @@
                 src="./images/port5.jpg"
                 alt="screen illustrations"
                 width="360"/>
-                <p class="fourth-sect-p">
-                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
-                </p>
+                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
               </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">
@@ -418,9 +408,7 @@
                 src="./images/port6.jpg"
                 alt="online courses"
                 width="360"/>
-                <p class="fourth-sect-p">
-                  14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app
-                </p>
+                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
               </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Online Courses</h3>
@@ -435,41 +423,42 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="logo footer-logo"
+        <div class="logo-a">
+          <a href="./index.html" class="logo footer-logo"
           >Web<span class="footer-logo-span">Studio</span></a
         >
         <p class="footer-p">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        </div>
         <div class="footer-div">
-          <a href=""></a>
           <p class="footer-p-sm">Social media</p>
           <ul class="footer-ul">
-            <li class="footer-li">
+            <li witdh="40" height="40" class="footer-li">
               <a class="footer-li-a" href="">
-                <svg class="footer-svg">
+                <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-li">
+            <li witdh="40" height="40" class="footer-li">
               <a class="footer-li-a" href="">
-                <svg class="footer-svg">
+                <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-li">
+            <li witdh="40" height="40" class="footer-li">
               <a class="footer-li-a" href="">
-                <svg class="footer-svg">
+                <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-facebook-svg"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-li">
+            <li witdh="40" height="40" class="footer-li">
               <a class="footer-li-a" href="">
-                <svg class="footer-svg">
+                <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
