--- a/index.html
+++ b/index.html
@@ -435,28 +435,28 @@
         <div class="footer-div">
           <p class="footer-p-sm">Social media</p>
           <ul class="footer-ul">
-            <li witdh="40" height="40" class="footer-li">
+            <li witdh="40px" height="40px" class="footer-li">
               <a class="footer-li-a" href="">
                 <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li witdh="40" height="40" class="footer-li">
+            <li witdh="40px" height="40px" class="footer-li">
               <a class="footer-li-a" href="">
                 <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li witdh="40" height="40" class="footer-li">
+            <li witdh="40px" height="40px" class="footer-li">
               <a class="footer-li-a" href="">
                 <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-facebook-svg"></use>
                 </svg>
               </a>
             </li>
-            <li witdh="40" height="40" class="footer-li">
+            <li witdh="40px" height="40px" class="footer-li">
               <a class="footer-li-a" href="">
                 <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-linkedin"></use>
