--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             >Web<span class="logo-span">Studio</span></a
           >
           <ul class="nav-list">
-            <li><a class="first-li-a" href="./index.html" class="nav-link first-li">Studio</a></li>
+            <li><a href="./index.html" class="nav-link first-li">Studio</a></li>
             <li><a href="" class="nav-link">Portfolio</a></li>
             <li><a href="" class="nav-link">Contacts</a></li>
           </ul>
@@ -334,7 +334,10 @@
                 src="./images/port1.jpg"
                 alt="Banking app"
                 width="360"/>
-                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
+                <p class="fourth-sect-p">14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie 
+                  Tracker App · Exotic Fruit Ecommerce App · 
+                  Cloud Storage App</p>
               </div>        
               <div class="app-card">
                 <h3 class="section-title app-category-title">Banking App</h3>
@@ -348,7 +351,10 @@
                 src="./images/port2.jpg"
                 alt="cashless payment"
                 width="360"/>
-                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
+                <p class="fourth-sect-p">14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie 
+                  Tracker App · Exotic Fruit Ecommerce App · 
+                  Cloud Storage App</p>
               </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">
@@ -364,7 +370,10 @@
               src="./images/port3.jpg"
               alt="meditation app"
               width="360"/>
-              <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
+              <p class="fourth-sect-p">14 Stylish and User-Friendly App Design
+                Concepts · Task Manager App · Calorie 
+                Tracker App · Exotic Fruit Ecommerce App · 
+                Cloud Storage App</p>
             </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Meditation App</h3>
@@ -378,7 +387,10 @@
                 src="./images/port4.jpg"
                 alt="Taxi Service"
                 width="360"/>
-                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
+                <p class="fourth-sect-p">14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie 
+                  Tracker App · Exotic Fruit Ecommerce App · 
+                  Cloud Storage App</p>
               </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Taxi Service</h3>
@@ -392,7 +404,10 @@
                 src="./images/port5.jpg"
                 alt="screen illustrations"
                 width="360"/>
-                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
+                <p class="fourth-sect-p">14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie 
+                  Tracker App · Exotic Fruit Ecommerce App · 
+                  Cloud Storage App</p>
               </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">
@@ -408,7 +423,10 @@
                 src="./images/port6.jpg"
                 alt="online courses"
                 width="360"/>
-                <p class="fourth-sect-p">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app · cloud storage app</p>
+                <p class="fourth-sect-p">14 Stylish and User-Friendly App Design
+                  Concepts · Task Manager App · Calorie 
+                  Tracker App · Exotic Fruit Ecommerce App · 
+                  Cloud Storage App</p>
               </div>
               <div class="app-card">
                 <h3 class="section-title app-category-title">Online Courses</h3>
@@ -435,30 +453,30 @@
         <div class="footer-div">
           <p class="footer-p-sm">Social media</p>
           <ul class="footer-ul">
-            <li witdh="40px" height="40px" class="footer-li">
+            <li  class="footer-li">
               <a class="footer-li-a" href="">
                 <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li witdh="40px" height="40px" class="footer-li">
+            <li class="footer-li">
               <a class="footer-li-a" href="">
                 <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li witdh="40px" height="40px" class="footer-li">
+            <li class="footer-li">
               <a class="footer-li-a" href="">
                 <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-facebook-svg"></use>
                 </svg>
               </a>
             </li>
-            <li witdh="40px" height="40px" class="footer-li">
+            <li class="footer-li">
               <a class="footer-li-a" href="">
-                <svg width="24" height="24" class="footer-svg">
+                <svg class="footer-svg">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
