--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             </li>
             <li class="footer-li">
               <a class="footer-li-a" href="">
-                <svg class="footer-svg">
+                <svg width="24" height="24" class="footer-svg">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
